--- a/index.html
+++ b/index.html
@@ -6,93 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link rel="icon" type="image/x-icon" href="assets/favicon-32x32.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <title>Testimonils</title>
     <icon></icon>
 </head>
 <body>
-    <section class="testmonial-container row">
+    <section class="testimonial-container row">
         <div class="col-md-9">
             <div class="row">
-                <div class="col-md-8">
-                    <div class="testimonial-card">
+                <div class="col-md-8 bg-violet text-light">
+                    <div class="testimonial-card" id="daniel">
                         <div class="testimonial-header">
-                            <img src="assets/image-daniel.jpg">
-                            <div class="testimonila-header-name">
+                            <img src="assets/image-daniel.jpg" class="testimonial-header-img">
+                            <div class="testimonial-header-name">
                                 <div class="name">Daniel Clifford</div>
                                 <div class="designation">Verified Graduate</div>
                             </div>
                         </div>
                         <div class="testimonial-body">
                             <div class="testimonial-body-heading">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</div>
-                            <div class="testimonial-body-para">“I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup.”</div>
+                            <div class="testimonial-body-para">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 bg-grey text-light">
                     <div class="testimonial-card">
                         <div class="testimonial-header">
-                            <img src="assets/image-daniel.jpg">
-                            <div class="testimonila-header-name">
-                                <div class="name">Daniel Clifford</div>
+                            <img src="assets/image-jonathan.jpg" class="testimonial-header-img">
+                            <div class="testimonial-header-name">
+                                <div class="name">Jonathan Walters</div>
                                 <div class="designation">Verified Graduate</div>
                             </div>
                         </div>
                         <div class="testimonial-body">
-                            <div class="testimonial-body-heading">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</div>
-                            <div class="testimonial-body-para">“I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup.”</div>
+                            <div class="testimonial-body-heading">The team was very supportive and kept me motivated</div>
+                            <div class="testimonial-body-para">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row second">
+                <div class="col-md-4 bg-white text-dark">
                     <div class="testimonial-card">
                         <div class="testimonial-header">
-                            <img src="assets/image-daniel.jpg">
-                            <div class="testimonila-header-name">
-                                <div class="name">Daniel Clifford</div>
+                            <img src="assets/image-jeanette.jpg" class="testimonial-header-img">
+                            <div class="testimonial-header-name">
+                                <div class="name">Jeanette Harmon</div>
                                 <div class="designation">Verified Graduate</div>
                             </div>
                         </div>
                         <div class="testimonial-body">
-                            <div class="testimonial-body-heading">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</div>
-                            <div class="testimonial-body-para">“I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup.”</div>
+                            <div class="testimonial-body-heading">An overall wonderful and rewarding experience</div>
+                            <div class="testimonial-body-para"> “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 bg-dark text-light">
                     <div class="testimonial-card">
                         <div class="testimonial-header">
-                            <img src="assets/image-daniel.jpg">
-                            <div class="testimonila-header-name">
-                                <div class="name">Daniel Clifford</div>
+                            <img src="assets/image-patrick.jpg" class="testimonial-header-img">
+                            <div class="testimonial-header-name">
+                                <div class="name">Patrick Abrams</div>
                                 <div class="designation">Verified Graduate</div>
                             </div>
                         </div>
                         <div class="testimonial-body">
-                            <div class="testimonial-body-heading">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</div>
-                            <div class="testimonial-body-para">“I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup.”</div>
+                            <div class="testimonial-body-heading">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</div>
+                            <div class="testimonial-body-para">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
-                    <div class="testimonial-card">
-                        <div class="testimonial-header">
-                            <img src="assets/image-daniel.jpg">
-                            <div class="testimonila-header-name">
-                                <div class="name">Daniel Clifford</div>
-                                <div class="designation">Verified Graduate</div>
-                            </div>
-                        </div>
-                        <div class="testimonial-body">
-                            <div class="testimonial-body-heading">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</div>
-                            <div class="testimonial-body-para">“I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup.”</div>
-                        </div>
+        <div class="col-md-3 bg-white text-dark">
+            <div class="testimonial-card">
+                <div class="testimonial-header">
+                    <img src="assets/image-kira.jpg" class="testimonial-header-img">
+                    <div class="testimonial-header-name">
+                        <div class="name">Kira Whittle</div>
+                        <div class="designation">Verified Graduate</div>
                     </div>
+                </div>
+                <div class="testimonial-body">
+                        <div class="testimonial-body-heading">Such a life-changing experience. Highly recommended!</div>
+                        <div class="testimonial-body-para">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”</div>
+                </div>
+             </div>
         </div>
     </section>
     <footer></footer>
