--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="testimonial-body">
-                            <div class="testimonial-body-heading">The team was very supportive and kept me motivated</div>
+                            <div class="testimonial-body-heading">The team was very supportive and kept me motivated.</div>
                             <div class="testimonial-body-para">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</div>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="testimonial-body">
-                            <div class="testimonial-body-heading">An overall wonderful and rewarding experience</div>
+                            <div class="testimonial-body-heading">An overall wonderful and rewarding experience.</div>
                             <div class="testimonial-body-para"> “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</div>
                         </div>
                     </div>
